--- a/simulator.html
+++ b/simulator.html
@@ -268,14 +268,13 @@
         <div class="text-center mb-12">
             <h1 id="page-title" class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Create Your Financial Plan
             </h1>
-            <p id="page-subtitle" class="text-xl text-gray-600">Follow these simple steps to calculate your funding gap
+            <p id="page-subtitle" class="text-xl text-gray-600">5 questions between you and clarity
             </p>
         </div>
 
         <!-- Progress Bar -->
         <div class="bg-white rounded-2xl border border-gray-200 p-6 mb-8 shadow-sm">
             <div class="flex justify-around flex-wrap gap-2">
-                <div class="step-indicator" id="step-0-indicator">0. Search Method</div>
                 <div class="step-indicator" id="step-1-indicator">1. Programs</div>
                 <div class="step-indicator" id="step-2-indicator">2. Funds</div>
                 <div class="step-indicator" id="step-3-indicator">3. Hidden Costs</div>
@@ -284,43 +283,36 @@
             </div>
         </div>
 
-        <!-- Step 0: Search Method -->
-        <section id="step-0" class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">How would you like to search?</h2>
-            <p class="text-gray-600 mb-8 text-center">Choose your preferred search method to find programs</p>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-4xl mx-auto">
-                <div class="card-selectable" onclick="selectSearchMethod('country', this)">
-                    <div class="text-5xl mb-4">🌍</div>
-                    <h3 class="text-xl font-bold mb-2">By Country</h3>
-                    <p class="text-sm text-gray-600">Start with a country, then select university and program</p>
-                </div>
-                <div class="card-selectable" onclick="selectSearchMethod('university', this)">
-                    <div class="text-5xl mb-4">🏛️</div>
-                    <h3 class="text-xl font-bold mb-2">By University</h3>
-                    <p class="text-sm text-gray-600">Start with a university, then select program</p>
-                </div>
-                <div class="card-selectable" onclick="selectSearchMethod('program', this)">
-                    <div class="text-5xl mb-4">📚</div>
-                    <h3 class="text-xl font-bold mb-2">By Program</h3>
-                    <p class="text-sm text-gray-600">Start with a program, then select country and university</p>
-                </div>
-            </div>
-        </section>
+
 
         <!-- Step 1: Programs -->
-        <section id="step-1" class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm hidden">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 1: Select Your Programs</h2>
+        <section id="step-1" class="bg-white rounded-2xl border border-gray-200 p-8 mb-8 shadow-sm">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">Step 1: Find Your Program</h2>
 
-            <!-- Dynamic Search Fields Based on Method -->
-            <div id="search-fields-container" class="space-y-6 mb-6">
-                <!-- Fields will be dynamically inserted here -->
+            <!-- Single Intelligent Search Bar -->
+            <div class="mb-8">
+                <label class="block text-sm font-semibold text-gray-700 mb-3">Search for university or program</label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                    </div>
+                    <input type="text" id="intelligent-search"
+                        class="w-full pl-12 pr-4 py-4 text-lg border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all"
+                        placeholder="Try 'Harvard MBA' or 'IE Business School'..." autocomplete="off"
+                        oninput="intelligentSearch(this.value)">
+                    <div id="search-results" class="search-dropdown hidden"></div>
+                </div>
+                <p class="text-sm text-gray-500 mt-2">Search by university name, program, or both</p>
             </div>
 
             <!-- Selected Programs -->
             <div id="selectedPrograms" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4"></div>
 
             <p id="emptyState" class="text-center text-gray-500 py-8 border-2 border-dashed border-gray-200 rounded-xl">
-                Select your search criteria to find programs
+                Start typing to search for programs
             </p>
         </section>
 
@@ -397,8 +389,8 @@
                 'Master of Digital Marketing', 'Master of E-commerce', 'Master of Fintech'
             ];
 
-            // Initialize step 0 as active
-            document.getElementById('step-0-indicator').classList.add('active');
+            // Initialize step 1 as active (Step 0 removed)
+            document.getElementById('step-1-indicator').classList.add('active');
 
             // Universities database - comprehensive list by country
             function generateUniversitiesDatabase() {
@@ -535,88 +527,73 @@
 
             const universitiesDatabase = generateUniversitiesDatabase();
 
-            // Function to select search method
-            function selectSearchMethod(method, element) {
-                document.querySelectorAll('#step-0 .card-selectable').forEach(card => {
-                    card.classList.remove('selected');
-                });
-                element.classList.add('selected');
+            // Intelligent search function - searches both universities and programs
+            window.intelligentSearch = function (query) {
+                const resultsDiv = document.getElementById('search-results');
 
-                window.searchMethod = method;
-                document.getElementById('step-0-indicator').classList.add('active');
-                document.getElementById('step-1-indicator').classList.add('active');
-
-                document.getElementById('step-0').classList.add('hidden');
-                document.getElementById('step-1').classList.remove('hidden');
-
-                renderSearchFields(method);
-            }
-
-            function renderSearchFields(method) {
-                const container = document.getElementById('search-fields-container');
-                container.innerHTML = '';
-
-                if (method === 'country') {
-                    container.innerHTML = `
-                        <div class="space-y-2 relative">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select Country</label>
-                            <select id="search-country" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onCountrySelected()">
-                                <option value="">Select a country</option>
-                                ${countries.map(c => `<option value="${c.code}">${c.name}</option>`).join('')}
-                            </select>
-                        </div>
-                        <div id="university-field" class="space-y-2 relative hidden">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select University</label>
-                            <select id="search-university" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onUniversitySelected()">
-                                <option value="">Select a university</option>
-                            </select>
-                        </div>
-                        <div id="program-field" class="space-y-2 relative hidden">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select Program</label>
-                            <select id="search-program" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onProgramSelected()">
-                                <option value="">Select a program</option>
-                            </select>
-                        </div>
-                    `;
-                } else if (method === 'university') {
-                    container.innerHTML = `
-                        <div class="space-y-2 relative">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Search University</label>
-                            <input type="text" id="search-university-input" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" placeholder="Start typing university name..." autocomplete="off" oninput="searchUniversity(this.value)">
-                            <div id="university-results" class="search-dropdown hidden"></div>
-                        </div>
-                        <div id="program-field" class="space-y-2 relative hidden mt-6">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select Program</label>
-                            <select id="search-program" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onProgramSelected()">
-                                <option value="">Select a program</option>
-                            </select>
-                        </div>
-                    `;
-                } else if (method === 'program') {
-                    container.innerHTML = `
-                        <div class="space-y-2 relative">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select Program</label>
-                            <select id="search-program" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onProgramSelected()">
-                                <option value="">Select a program</option>
-                                ${programs.map(p => `<option value="${p}">${p}</option>`).join('')}
-                            </select>
-                        </div>
-                        <div id="country-field" class="space-y-2 relative hidden mt-6">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select Country</label>
-                            <select id="search-country" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onCountrySelected()">
-                                <option value="">Select a country</option>
-                                ${countries.map(c => `<option value="${c.code}">${c.name}</option>`).join('')}
-                            </select>
-                        </div>
-                        <div id="university-field" class="space-y-2 relative hidden mt-6">
-                            <label class="block text-sm font-semibold text-gray-700 mb-2">Select University</label>
-                            <select id="search-university" class="w-full px-4 py-3 border-2 border-gray-200 rounded-xl focus:border-indigo-600 focus:ring-2 focus:ring-indigo-100 transition-all" onchange="onUniversitySelected()">
-                                <option value="">Select a university</option>
-                            </select>
-                        </div>
-                    `;
+                if (query.length < 2) {
+                    resultsDiv.classList.add('hidden');
+                    return;
                 }
-            }
+
+                // Search in universitiesDatabase for matches in university name OR program name
+                const matches = universitiesDatabase.filter(item => {
+                    const uniMatch = item.name.toLowerCase().includes(query.toLowerCase());
+                    const programMatch = item.program.toLowerCase().includes(query.toLowerCase());
+                    return uniMatch || programMatch;
+                }).slice(0, 10); // Limit to 10 results
+
+                if (matches.length === 0) {
+                    resultsDiv.innerHTML = '<div class="search-result p-4 text-center text-gray-500">No programs found</div>';
+                } else {
+                    resultsDiv.innerHTML = matches.map(item => `
+                        <div class="search-result" onclick="selectProgram('${item.name.replace(/'/g, "\\'")}', '${item.program.replace(/'/g, "\\'")}', '${item.country}', '${item.countryName}', ${item.tuition}, ${item.duration}, ${item.livingCost})">
+                            <div class="font-bold text-gray-900">${item.name}</div>
+                            <div class="text-sm text-gray-600">${item.program} - ${item.countryName}</div>
+                            <div class="text-sm text-indigo-600 font-semibold mt-1">$${item.tuition.toLocaleString()} • ${item.duration} months</div>
+                        </div>
+                    `).join('');
+                }
+
+                resultsDiv.classList.remove('hidden');
+            };
+
+            // Select a program from search results
+            window.selectProgram = function (uniName, programName, countryCode, countryName, tuition, duration, livingCost) {
+                // Check if already selected
+                const alreadySelected = window.selectedPrograms.find(p =>
+                    p.name === uniName && p.program === programName
+                );
+
+                if (alreadySelected) {
+                    alert('This program is already selected');
+                    return;
+                }
+
+                // Add to selected programs
+                window.selectedPrograms.push({
+                    name: uniName,
+                    location: `${countryName} - ${uniName}`,
+                    tuition: `$${tuition.toLocaleString()}`,
+                    duration: `${duration} months`,
+                    program: programName,
+                    country: countryCode,
+                    countryName: countryName,
+                    livingCost: livingCost,
+                    tuitionNum: tuition,
+                    durationNum: duration
+                });
+
+                // Clear search and hide results
+                document.getElementById('intelligent-search').value = '';
+                document.getElementById('search-results').classList.add('hidden');
+
+                // Hide empty state and render programs
+                document.getElementById('emptyState').classList.add('hidden');
+                renderSelectedPrograms();
+            };
+
+            // Remove old search method functions (no longer needed)
 
             window.onCountrySelected = function () {
                 const countryCode = document.getElementById('search-country').value;
