--- a/dashboard.html
+++ b/dashboard.html
@@ -92,21 +92,74 @@
         </div>
 
         <!-- Empty State -->
-        <div id="empty-state" class="bg-white rounded-2xl border border-gray-200 p-16 text-center shadow-sm">
-            <div class="max-w-md mx-auto">
-                <div class="w-24 h-24 gradient-bg rounded-full mx-auto mb-6 flex items-center justify-center">
-                    <svg class="w-12 h-12 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-                    </svg>
+        <div id="empty-state" class="text-center">
+            <!-- Hero Message -->
+            <div class="mb-12">
+                <div class="text-6xl mb-4">🎓</div>
+                <h2 class="text-3xl font-bold text-gray-900 mb-3">Ready to plan your Master's abroad?</h2>
+                <p class="text-gray-600 text-lg mb-4">Join 1,247 students who created their financial plan this month
+                </p>
+            </div>
+
+            <!-- 3-Step Visual Guide -->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12 max-w-4xl mx-auto">
+                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
+                    <div
+                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+                        1
+                    </div>
+                    <h3 class="font-bold text-gray-900 mb-2">Find Your Program</h3>
+                    <p class="text-sm text-gray-600">Search from 500+ universities and programs worldwide</p>
                 </div>
-                <h2 class="text-2xl font-bold text-gray-900 mb-3">You don't have any saved plans yet</h2>
-                <p class="text-gray-600 mb-8">Create your first financial plan and start planning your Master's degree
-                    abroad</p>
+                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
+                    <div
+                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+                        2
+                    </div>
+                    <h3 class="font-bold text-gray-900 mb-2">Add Your Finances</h3>
+                    <p class="text-sm text-gray-600">Input savings, scholarships, and expected income</p>
+                </div>
+                <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
+                    <div
+                        class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
+                        3
+                    </div>
+                    <h3 class="font-bold text-gray-900 mb-2">Get Your Roadmap</h3>
+                    <p class="text-sm text-gray-600">See your funding gap and 24-month cash flow</p>
+                </div>
+            </div>
+
+            <!-- Sample Result Preview (Expandable) -->
+            <div class="max-w-2xl mx-auto mb-12">
+                <details
+                    class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-6">
+                    <summary class="cursor-pointer font-semibold text-indigo-700 text-lg">
+                        👀 See what your results will look like
+                    </summary>
+                    <div class="mt-4 text-left">
+                        <img src="https://via.placeholder.com/600x300/667eea/ffffff?text=Sample+Financial+Roadmap"
+                            alt="Sample Result Preview" class="rounded-xl border-2 border-indigo-300 w-full">
+                        <p class="text-sm text-gray-600 mt-3 text-center">Your personalized financial roadmap with
+                            funding gap, cash flow chart, and actionable recommendations</p>
+                    </div>
+                </details>
+            </div>
+
+            <!-- CTAs -->
+            <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
                 <a href="simulator.html"
-                    class="gradient-bg text-white px-8 py-3 rounded-xl font-semibold inline-block hover:shadow-lg transition-all">
-                    Create Your First Plan
+                    class="gradient-bg text-white px-10 py-4 rounded-xl font-bold text-lg inline-block hover:shadow-xl transition-all transform hover:-translate-y-1">
+                    Create Your First Plan →
                 </a>
+                <a href="pricing.html"
+                    class="bg-white text-indigo-600 border-2 border-indigo-200 px-10 py-4 rounded-xl font-semibold text-lg inline-block hover:bg-indigo-50 transition-all">
+                    See Pricing
+                </a>
+            </div>
+
+            <!-- Social Proof -->
+            <div class="mt-12 text-gray-500 text-sm">
+                ⭐⭐⭐⭐⭐ Rated 4.9/5 by 1,000+ students
             </div>
         </div>
 
