--- a/results.html
+++ b/results.html
@@ -374,6 +374,27 @@
                             </div>
                         </div>
 
+                        <!-- Comparison Preview Teaser -->
+                        <div id="comparison-preview"
+                            class="mt-8 bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-8 shadow-lg">
+                            <div class="text-center mb-6">
+                                <h3 class="text-2xl font-bold text-gray-900 mb-2">How does this compare?</h3>
+                                <p class="text-gray-600">Students with similar profiles also considered these programs
+                                </p>
+                            </div>
+
+                            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6" id="similar-programs-container">
+                                <!-- Similar programs will be inserted here by JavaScript -->
+                            </div>
+
+                            <div class="text-center">
+                                <button onclick="startComparison()"
+                                    class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white px-8 py-3 rounded-xl font-semibold hover:shadow-xl transition-all transform hover:-translate-y-1">
+                                    Compare All Options
+                                </button>
+                            </div>
+                        </div>
+
                         <!-- Comparison Card (Task C) -->
                         <div class="mt-8 border-2 border-dashed border-gray-300 rounded-2xl p-8 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group"
                             onclick="startComparison()">
@@ -410,6 +431,13 @@
                             "Funding Gap".</p>
                         <div class="w-full h-80">
                             <canvas id="cash-flow-chart"></canvas>
+                        </div>
+                        <div class="mt-4 text-center">
+                            <button
+                                onclick="document.getElementById('sidebar-controls').scrollIntoView({behavior: 'smooth'})"
+                                class="bg-indigo-50 text-indigo-700 px-6 py-2 rounded-lg font-semibold hover:bg-indigo-100 transition-all">
+                                ⚙️ Adjust Scenario
+                            </button>
                         </div>
                     </section>
 
@@ -534,6 +562,7 @@
             const labels = [];
             const balanceData = [];
             const todayPointData = [];
+            const paymentInfo = []; // Track payment info for tooltips
             let currentBalance = personalFunds;
             const startDate = new Date(2025, 6, 1);
 
@@ -556,12 +585,22 @@
 
                 let monthlyExpense = monthlyLiving;
                 const adjustedTuitionMonths = tuitionMonths.map(m => m + 1);
-                if (adjustedTuitionMonths.includes(i)) {
+                const hasTuitionPayment = adjustedTuitionMonths.includes(i);
+
+                if (hasTuitionPayment) {
                     monthlyExpense += tuitionPayment;
                 }
 
                 currentBalance -= monthlyExpense;
                 currentBalance += monthlyIncome;
+
+                // Store payment info for tooltip
+                paymentInfo.push({
+                    hasTuition: hasTuitionPayment,
+                    tuitionAmount: hasTuitionPayment ? tuitionPayment : 0,
+                    living: monthlyLiving,
+                    income: monthlyIncome
+                });
 
                 balanceData.push(currentBalance);
                 todayPointData.push(i === currentMonthIndex ? currentBalance : null);
@@ -584,12 +623,12 @@
                         {
                             label: 'Today',
                             data: todayPointData,
-                            borderColor: '#16a34a',
-                            backgroundColor: '#16a34a',
-                            pointRadius: 8,
-                            pointHoverRadius: 10,
+                            borderColor: '#10b981',
+                            backgroundColor: '#10b981',
+                            pointRadius: 16, // Increased from 8
+                            pointHoverRadius: 20, // Increased from 10
                             pointStyle: 'circle',
-                            borderWidth: 3
+                            borderWidth: 4 // Increased from 3
                         },
                         {
                             label: 'Funding Gap (Zero Line)',
@@ -605,10 +644,38 @@
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
-                    scales: { y: { ticks: { callback: (value) => formatCurrency(value) } } },
+                    scales: {
+                        y: {
+                            ticks: { callback: (value) => formatCurrency(value) }
+                        }
+                    },
                     plugins: {
                         legend: { display: false },
-                        tooltip: { callbacks: { label: (context) => `Balance: ${formatCurrency(context.raw)}` } }
+                        tooltip: {
+                            callbacks: {
+                                label: (context) => {
+                                    const index = context.dataIndex;
+                                    const balance = context.raw;
+                                    const info = paymentInfo[index];
+
+                                    const lines = [`Balance: ${formatCurrency(balance)}`];
+
+                                    if (info.hasTuition) {
+                                        lines.push(`⚠️ Tuition payment: ${formatCurrency(info.tuitionAmount)}`);
+                                    }
+                                    if (info.income > 0) {
+                                        lines.push(`💰 Income: +${formatCurrency(info.income)}`);
+                                    }
+                                    lines.push(`🏠 Living: -${formatCurrency(info.living)}`);
+
+                                    return lines;
+                                },
+                                title: (context) => {
+                                    const index = context[0].dataIndex;
+                                    return index === currentMonthIndex ? '📍 TODAY' : context[0].label;
+                                }
+                            }
+                        }
                     }
                 }
             });
@@ -813,6 +880,62 @@
             window.location.href = 'simulator.html?mode=compare';
         };
 
+        const generateSimilarPrograms = (currentProgram, currentTuition) => {
+            // Generate 3 similar programs with varied tuition (±20%)
+            const similarPrograms = [
+                {
+                    name: 'ESADE Business School',
+                    program: 'Master in Management',
+                    country: 'Spain',
+                    tuition: Math.round(currentTuition * 0.85),
+                    duration: 24,
+                    tag: 'More Affordable'
+                },
+                {
+                    name: 'London School of Economics',
+                    program: 'MSc Management',
+                    country: 'United Kingdom',
+                    tuition: Math.round(currentTuition * 1.15),
+                    duration: 12,
+                    tag: 'Shorter Duration'
+                },
+                {
+                    name: 'HEC Paris',
+                    program: 'Master in Management',
+                    country: 'France',
+                    tuition: Math.round(currentTuition * 0.95),
+                    duration: 24,
+                    tag: 'Similar Cost'
+                }
+            ];
+
+            const container = document.getElementById('similar-programs-container');
+            if (!container) return;
+
+            container.innerHTML = similarPrograms.map(prog => `
+                <div class="card-hover bg-white rounded-xl border-2 border-indigo-100 p-6 shadow-sm">
+                    <div class="flex justify-between items-start mb-3">
+                        <span class="text-xs font-semibold px-3 py-1 bg-indigo-100 text-indigo-700 rounded-full">${prog.tag}</span>
+                    </div>
+                    <h4 class="font-bold text-gray-900 mb-1">${prog.name}</h4>
+                    <p class="text-sm text-gray-600 mb-3">${prog.program} • ${prog.country}</p>
+                    <div class="border-t border-gray-100 pt-3 mt-3">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="text-xs text-gray-500">Tuition</span>
+                            <span class="font-bold text-indigo-600">${formatCurrency(prog.tuition)}</span>
+                        </div>
+                        <div class="flex justify-between items-center mb-3">
+                            <span class="text-xs text-gray-500">Duration</span>
+                            <span class="text-sm font-semibold text-gray-700">${prog.duration} months</span>
+                        </div>
+                        <button onclick="alert('Feature coming soon: Add to comparison')" class="w-full bg-indigo-50 text-indigo-700 px-4 py-2 rounded-lg font-semibold text-sm hover:bg-indigo-100 transition-all">
+                            Add to Comparison
+                        </button>
+                    </div>
+                </div>
+            `).join('');
+        };
+
         document.addEventListener('DOMContentLoaded', () => {
             const params = new URLSearchParams(window.location.search);
             const simType = params.get('simType') || 'single';
@@ -880,6 +1003,9 @@
                 });
 
                 updateDashboard();
+
+                // Generate similar programs for comparison preview
+                generateSimilarPrograms(nameA, tuitionA);
 
             } else {
                 document.getElementById('main-content-area').classList.add('lg:col-span-4');
